# euler_problems

./: LICENSE  README.md  build-all.sh  build-and-run-all.sh  build-and-run-project.sh  build-project.sh  clean-all.sh  results.txt  run-all.sh  run-project.sh  test-all.sh
lib/include/: PrimeGenerator.h
problem1/: CMakeLists.txt  main.cpp
problem10/: CMakeLists.txt  Makefile  main.cpp
problem11/: CMakeLists.txt  main.cpp  setup.sh
problem12/: CMakeLists.txt  main.cpp
problem13/: CMakeLists.txt  main.cpp
problem14/: CMakeLists.txt  main.cpp
problem15/: CMakeLists.txt  main.cpp
problem16/: CMakeLists.txt  README  main.cpp
problem17/: CMakeLists.txt  main.cpp
problem18/: CMakeLists.txt  main.cpp  setup.sh
problem19/: CMakeLists.txt  Date.cpp  Date.h  main.cpp
problem2/: CMakeLists.txt  main.cpp
problem20/: CMakeLists.txt  main.cpp
problem21/: CMakeLists.txt  main.cpp
problem22/: CMakeLists.txt  main.cpp  setup.sh
problem23/: CMakeLists.txt  main.cpp
problem24/: CMakeLists.txt  main.cpp
problem25/: CMakeLists.txt  main.cpp
problem26/: CMakeLists.txt  main.cpp
problem27/: CMakeLists.txt  main.cpp
problem28/: CMakeLists.txt  main.cpp
problem29/: CMakeLists.txt  main.cpp
problem3/: CMakeLists.txt
problem3/include/: PrimeGenerator.h
problem3/src/: main.cpp
problem30/: CMakeLists.txt  main.cpp
problem31/: CMakeLists.txt  a.out  main.cpp
problem32/: CMakeLists.txt  Description.txt  a.out  main.cpp
problem33/: CMakeLists.txt  a.out  main.cpp
problem34/: CMakeLists.txt  main.cpp
problem35/: CMakeLists.txt  main.cpp
problem36/: CMakeLists.txt  main.cpp
problem37/: CMakeLists.txt  main.cpp
problem38/: CMakeLists.txt  main.cpp
problem39/: CMakeLists.txt  main.cpp
problem4/: CMakeLists.txt  main.cpp
problem5/: CMakeLists.txt  main.cpp
problem6/: CMakeLists.txt  main.cpp
problem7/: CMakeLists.txt
problem7/src/: main.cpp
problem8/: CMakeLists.txt  main.cpp
problem9/: CMakeLists.txt  main.cpp
