list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
project(project20)
cmake_minimum_required(VERSION 2.8)
find_package(GMP REQUIRED)
include_directories(${GMP_INCLUDE_DIR})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
add_executable(project20 main.cpp)
target_link_libraries(project20 ${GMP_LIBRARIES})
