list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
project(problem20)
cmake_minimum_required(VERSION 2.8)
find_package(GMP REQUIRED)
include_directories(${GMP_INCLUDE_DIR})
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3 -Werror  -Wall -Wextra")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
add_executable(problem20 main.cpp)
target_link_libraries(problem20 ${GMP_LIBRARIES})
